<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tag App</string>
    <string name="action_settings">Settings</string>
    
	<string name="edit_message">Temporary</string>
    <string name="button_send">Temporary</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="loginButton">Login</string>
    
    <string name="tagLocationButtonText">Tag Location</string>
    <string name="cameraButtonText">Add Image</string>
    <string name="uploadAssetButtonText">Upload Asset</string>
    <string name="latLabelText">Latitude:</string>
    <string name="longLabelText">Longitude:</string>
    <string name="initialLongText">NOT SET</string>
    <string name="initialLatText">LAT: NOT SET \nLONG: NOT SET \nBEARING: NOTSET</string>
    <string name="assetSpinnerPrompt">Select an Asset</string>
    <string name="serialLabel">Serial:</string>
    
    <string name="assetLoginServiceURI">http://li167-31.members.linode.com/ws.php?</string>
    <string name="uploadAssetURI">http://li167-31.members.linode.com/ws.php?</string>
    <string name="uploadPicuresURI">http://li167-31.members.linode.com/upload2.php</string>
    <string name="offlineStorage">Offline \n Storage</string>
    
    <string-array name="asset_array">
        <item>Power Pole</item>
        <item>Vault</item>
        <item>Underground Cable</item>
        <item>Above Ground Box</item>
    </string-array>
    
        <string-array name="distance_array">
        <item>Kilometers</item>
        <item>Miles</item>
        <item >Meters</item>
        <item>Yards</item>
        <item>Feet</item>
    </string-array>
    <string name="distanceLabel">Distance</string>
    
    
</resources>